--- a/chocolux-master/about.html
+++ b/chocolux-master/about.html
@@ -96,7 +96,7 @@
             <div class="detail-box">
               <div class="heading_container">
                 <h2>
-                  About Our Company
+                  About Us
                 </h2>
               </div>
               <p>
